# test-github-actions-msvc-ninja

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: windowsbuild.yml
